# record_sort

./: .gitignore  Cargo.toml  README.md  build.sh
src/: lib.rs  main.rs
src/benchmark/: benchmark.rs  benchmark_error.rs  measurement.rs  metering_result.rs  mod.rs  real_data_benchmark.rs  simple_benchmark.rs
src/cli/: action.rs  application_error.rs  console_application.rs  mod.rs
src/data/: mod.rs  record.rs  record_io_error.rs  review.rs
src/data/generation/: mod.rs  record_generator.rs  review_generator.rs
src/data/reader/: json_reader.rs  mod.rs  record_read_error.rs  record_reader.rs
src/data/reader/parallel_reader/: area.rs  area_splitter.rs  mod.rs  parallel_json_reader.rs
src/data/writer/: json_writer.rs  mod.rs  record_writer.rs
src/sort/: algorithm.rs  insertion_sort.rs  merge_sort.rs  mod.rs  quick_sort.rs  sort.rs  sort_factory.rs
src/util/: fac.rs  mod.rs  permutation.rs  random_number_generator.rs
tests/: insertion_sort_test.rs  merge_sort_test.rs  permutation_test.rs  quick_sort_test.rs
tests/data_sets/: read_test.json
