[package]
name = "record_sort"
version = "0.5.0"
authors = ["jweigelt <johannes.weigelt@stud.htwk-leipzig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
mockall = "0.5.2"